<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.BaseActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_action_logout"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/transaction"
        android:orderInCategory="200"
        android:title="@string/menu_transactions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1000"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

</menu>