<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewCard_transaction_add_point_of_sales_adapter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_half"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/linear_height"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/size_half"
        android:paddingStart="@dimen/size_half">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemMasterImage_transaction_fragment_adapter"
                android:layout_width="@dimen/item_image_width"
                android:layout_height="@dimen/item_image_height"
                android:layout_marginEnd="@dimen/size_half"
                android:contentDescription="@string/item_image"
                android:scaleType="centerCrop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_item_number"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_item_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_unit_of_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_unit_of_measure"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_price"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_quantity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_currency"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_discount"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_transaction_fragment_add_point_of_sales_adapter_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_amount"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>