<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_half"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    >

    <LinearLayout
        android:id="@+id/friends_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/friends_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address" />

        <TextView
            android:id="@+id/friends_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker_name" />

        <TextView
            android:id="@+id/friends_boolean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_to_connect" />

    </LinearLayout>


</android.support.v7.widget.CardView>




