<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_collapseParallaxMultiplier="0.7"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <!-- Recycler View here -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/transaction_fragment_recycler_view_add_purchase"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_image_recycler_view_height" />


            <!-- This will be on the top of the image that will give darker look -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/scrim" />

            <!-- Toolbar on top of the images poster at the top of the UI -->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:gravity="bottom"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <!-- For both the bar and the body -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- The thick bar on top below the parallax image -->
            <LinearLayout
                android:id="@+id/meta_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@color/purple_500"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/article_title"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:lineSpacingMultiplier="0.9"
                    android:paddingBottom="@dimen/size_half"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_extra_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/article_subtitle"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/iron" />

            </LinearLayout>
            <!-- we can add and modify view below here -->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/size_half"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/size_half">


                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/lookup_from_the_item_master_dialog"
                        android:src="@android:drawable/ic_menu_search" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_desc_barcode_scanner"
                        android:src="@android:drawable/ic_input_get" />

                    <EditText
                        android:id="@+id/textView_transaction_fragment_add_purchase_vendor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_vendor_name"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textAppearance="?android:attr/textAppearanceSmall" />


                    <EditText
                        android:id="@+id/textView_transaction_fragment_add_purchase_item_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/purch_item_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/textView_transaction_fragment_add_purchase_item_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/purch_description"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/textView_transaction_fragment_add_purchase_unit_of_measure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/purch_unit_of_measure"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/textView_transaction_fragment_add_purchase_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/purch_purchase_price"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/textView_transaction_fragment_add_purchase_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="33dp"
                        android:hint="@string/purch_currency"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/textView_transaction_fragment_add_purchase_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/purch_disc"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/textView_transaction_fragment_add_purchase_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/purch_quantity"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/checkout_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purch_discount_rate"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/checkout_tax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purch_tax_rate"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/checkout_tax_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purch_tax_value"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/checkout_total_after_tax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purch_grand_total"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <!-- Floating Action Bar -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_transaction_fragment_add_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/floating_action_button_to_add_new_sales_item"
        android:src="@android:drawable/ic_input_add"
        app:elevation="@dimen/fab_elevation"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="@dimen/pres_trans_FAB" />


</android.support.design.widget.CoordinatorLayout>